--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,8 +20,8 @@ body {
   --color-light-green: rgb(167, 243, 208);
   --color-light-blue: rgb(191, 219, 254);
   --color-light-orange: rgb(254, 215, 170);
+  --color-themeText: 30 41 59;
 }
-
 
 @layer utilities {
   .no-scrollbar::-webkit-scrollbar {
@@ -30,3 +30,22 @@ body {
   }
 }
 
+@layer components {
+  .btn-themeBlue {
+    @apply text-white font-semibold py-2 px-8 rounded-lg bg-[#3b82f6] 
+    hover:bg-blue-200 border-2 border-[#3b82f6] hover:text-black 
+    transition-all duration-300 hover:shadow-md cursor-pointer;
+  }
+
+  .btn-themeOrange {
+    @apply text-white font-semibold py-2 px-8 rounded-lg bg-[#f97316] 
+    hover:bg-orange-200 border-2 border-[#f97316] hover:text-black 
+    transition-all duration-300 hover:shadow-md cursor-pointer;
+  }
+
+  .btn-themeGreen {
+    @apply text-white font-semibold py-2 px-8 rounded-lg bg-[#10b981] 
+    hover:bg-green-200 border-2 border-[#10b981] hover:text-black 
+    transition-all duration-300 hover:shadow-md cursor-pointer;
+  }
+}
