Adds submenu to the nav menu if the item has children, moving on to animating those

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,6 +13,11 @@ body {
   overscroll-behavior: contain;
 }
 
+/* .transition-max-height {
+  transition: max-height 0.3s cubic-bezier(.4,0,.2,1);
+  overflow: hidden;
+} */
+
 :root {
   --color-bkg: 240 245 255;
   --color-blue: #3b82f6;
